--- a/lib/assets/templates/Podfile.erb
+++ b/lib/assets/templates/Podfile.erb
@@ -11,6 +11,9 @@ target '<%= app_name %>' do
     ]
   pod 'yoga', path: '../node_modules/react-native/ReactCommon/yoga'
   pod 'Folly', podspec: '../node_modules/react-native/third-party-podspecs/Folly.podspec'
+
+  # --- react-native link adds pods below this line. ---
+
 end
 
 <% if test_target %>
