Use app_target.name instead of app_name for app target

--- a/lib/assets/templates/Podfile.erb
+++ b/lib/assets/templates/Podfile.erb
@@ -1,4 +1,4 @@
-target '<%= app_name %>' do
+target '<%= app_target.name %>' do
   platform :ios, '<%= app_target.deployment_target %>'
 
   pod 'React',
