--- a/lib/assets/templates/Podfile.erb
+++ b/lib/assets/templates/Podfile.erb
@@ -18,9 +18,36 @@ end
 
 <% if test_target %>
 target '<%= test_target.name %>' do
-  platform :ios, '<%= app_target.deployment_target %>'
+  platform :ios, '<%= test_target.deployment_target %>'
 
   pod 'React', path: '../node_modules/react-native', subspecs: <%= (%w[Core CxxBridge] + test_target.subspecs_from_libraries).inspect %>
+  pod 'yoga', path: '../node_modules/react-native/ReactCommon/yoga'
+  pod 'Folly', podspec: '../node_modules/react-native/third-party-podspecs/Folly.podspec'
+end
+<% end %>
+
+<% if app_target :tvos %>
+target '<%= app_target(:tvos).name %>' do
+  platform :tvos, '<%= app_target(:tvos).deployment_target %>'
+
+  pod 'React',
+    path: '../node_modules/react-native',
+    subspecs: %w[
+      Core
+      CxxBridge
+      DevSupport
+      <%= app_target(:tvos).subspecs_from_libraries.join("\n      ") %>
+    ]
+  pod 'yoga', path: '../node_modules/react-native/ReactCommon/yoga'
+  pod 'Folly', podspec: '../node_modules/react-native/third-party-podspecs/Folly.podspec'
+end
+<% end %>
+
+<% if test_target :tvos %>
+target '<%= test_target(:tvos).name %>' do
+  platform :tvos, '<%= test_target(:tvos).deployment_target %>'
+
+  pod 'React', path: '../node_modules/react-native', subspecs: <%= (%w[Core CxxBridge] + test_target(:tvos).subspecs_from_libraries).inspect %>
   pod 'yoga', path: '../node_modules/react-native/ReactCommon/yoga'
   pod 'Folly', podspec: '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 end
