--- a/lib/assets/templates/Podfile.erb
+++ b/lib/assets/templates/Podfile.erb
@@ -4,46 +4,29 @@ pod 'Folly', podspec: '../node_modules/react-native/third-party-podspecs/Folly.p
 target '<%= app_target.name %>' do
   platform :ios, '<%= app_target.deployment_target %>'
 
-  pod 'React',
-    path: '../node_modules/react-native',
-    subspecs: %w[
-      Core
-      CxxBridge
-      DevSupport
-      <%= app_target.subspecs_from_libraries.join("\n      ") %>
-    ]
+  <%= app_target.podfile_excerpt %>
 
   # --- react-native link adds pods below this line. ---
 
 end
-
 <% if test_target %>
 target '<%= test_target.name %>' do
   platform :ios, '<%= app_target.deployment_target %>'
 
-  pod 'React', path: '../node_modules/react-native', subspecs: <%= (%w[Core CxxBridge] + test_target.subspecs_from_libraries).inspect %>
+  <%= test_target.podfile_excerpt %>
 end
 <% end %>
-
 <% if app_target :tvos %>
 target '<%= app_target(:tvos).name %>' do
   platform :tvos, '<%= app_target(:tvos).deployment_target %>'
 
-  pod 'React',
-    path: '../node_modules/react-native',
-    subspecs: %w[
-      Core
-      CxxBridge
-      DevSupport
-      <%= app_target(:tvos).subspecs_from_libraries.join("\n      ") %>
-    ]
+  <%= app_target(:tvos).podfile_excerpt %>
 end
 <% end %>
-
 <% if test_target :tvos %>
 target '<%= test_target(:tvos).name %>' do
   platform :tvos, '<%= app_target(:tvos).deployment_target %>'
 
-  pod 'React', path: '../node_modules/react-native', subspecs: <%= (%w[Core CxxBridge] + test_target(:tvos).subspecs_from_libraries).inspect %>
+  <%= test_target(:tvos).podfile_excerpt %>
 end
 <% end %>
