--- a/lib/assets/templates/Podfile.erb
+++ b/lib/assets/templates/Podfile.erb
@@ -1,3 +1,9 @@
+# Uncomment to build frameworks instead of static libraries.
+# This is required to use Swift pods. It may also require
+# some import changes.
+
+# use_frameworks!
+
 pod 'yoga', path: '../node_modules/react-native/ReactCommon/yoga'
 pod 'Folly', podspec: '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
