--- a/lib/assets/templates/Podfile-target.erb
+++ b/lib/assets/templates/Podfile-target.erb
@@ -1,8 +1,8 @@
-pod 'React',
-  path: '../node_modules/react-native',
-  subspecs: %w[
-    Core
-    CxxBridge
-    DevSupport
-    <%= subspecs_from_libraries.join("\n      ") %>
-  ]
+  pod 'React',
+    path: '../node_modules/react-native',
+    subspecs: %w[
+      Core
+      CxxBridge
+      DevSupport
+      <%= subspecs_from_libraries.join("\n      ") + "\n" -%>
+    ]
