try to mix the build so tvOS is unchanged

--- a/lib/assets/templates/Podfile.erb
+++ b/lib/assets/templates/Podfile.erb
@@ -7,12 +7,12 @@
 
 # use_frameworks!
 
+platform :ios, '<%= app_target.deployment_target %>'
+
 pod 'yoga', path: '../node_modules/react-native/ReactCommon/yoga'
 pod 'Folly', podspec: '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
 target '<%= app_target.name %>' do
-  platform :ios, '<%= app_target.deployment_target %>'
-
 <%= app_target.podfile_excerpt %>
 
   # --- react-native link adds pods below this line. ---
@@ -21,24 +21,8 @@ end
 
 <% if test_target %>
 target '<%= test_target.name %>' do
-  platform :ios, '<%= app_target.deployment_target %>'
-
 <%= test_target.podfile_excerpt %>
 end
 <% end %>
 
-<% if app_target :tvos %>
-target '<%= app_target(:tvos).name %>' do
-  platform :tvos, '<%= app_target(:tvos).deployment_target %>'
-
-<%= app_target(:tvos).podfile_excerpt %>
-end
-<% end %>
-
-<% if test_target :tvos %>
-target '<%= test_target(:tvos).name %>' do
-  platform :tvos, '<%= app_target(:tvos).deployment_target %>'
-
-<%= test_target(:tvos).podfile_excerpt %>
-end
-<% end %>
+# The React pod in production does not compile for tvOS.
