--- a/lib/assets/templates/Podfile.erb
+++ b/lib/assets/templates/Podfile.erb
@@ -2,7 +2,7 @@
 # <%= GITHUB_REPO %>
 
 # Uncomment the next line to define a global platform for your project
-platform :ios, '<%= app_target.deployment_target %>'
+# platform :ios, '<%= app_target.deployment_target %>'
 
 # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
 # use_frameworks!
