--- a/lib/assets/templates/Podfile.erb
+++ b/lib/assets/templates/Podfile.erb
@@ -24,14 +24,14 @@ end
 
 <% if app_target :tvos %>
 target '<%= app_target(:tvos).name %>' do
-  platform :ios, '<%= app_target(:tvos).deployment_target %>'
+  platform :tvos, '<%= app_target(:tvos).deployment_target %>'
 <%= app_target(:tvos).podfile_excerpt %>
 end
 <% end %>
 
 <% if test_target :tvos %>
 target '<%= test_target(:tvos).name %>' do
-  platform :ios, '<%= app_target(:tvos).deployment_target %>'
+  platform :tvos, '<%= app_target(:tvos).deployment_target %>'
 <%= test_target(:tvos).podfile_excerpt %>
 end
 <% end %>
