Just generate commented-out tvOS blocks

--- a/lib/assets/templates/Podfile.erb
+++ b/lib/assets/templates/Podfile.erb
@@ -22,4 +22,17 @@ target '<%= test_target.name %>' do
 end
 <% end %>
 
-# As of 0.59.8, the React pod does not compile for tvOS.
+# As of 0.59.8, the React pod does not compile for tvOS
+# <% if app_target :tvos %>
+# target '<%= app_target(:tvos).name %>' do
+#   platform :tvos, '<%= app_target(:tvos).deployment_target %>'
+<%= app_target(:tvos).podfile_excerpt commented_out: true %>
+# end
+# <% end %>
+
+# <% if test_target :tvos %>
+# target '<%= test_target(:tvos).name %>' do
+#   platform :tvos, '<%= app_target(:tvos).deployment_target %>'
+<%= test_target(:tvos).podfile_excerpt commented_out: true %>
+# end
+# <% end %>
