--- a/lib/assets/templates/Podfile.erb
+++ b/lib/assets/templates/Podfile.erb
@@ -10,7 +10,6 @@ pod 'Folly', podspec: '../node_modules/react-native/third-party-podspecs/Folly.p
 target '<%= app_target.name %>' do
   platform :ios, '<%= app_target.deployment_target %>'
 <%= app_target.podfile_excerpt %>
-
   # --- react-native link adds pods below this line. ---
 
 end
@@ -23,16 +22,16 @@ end
 <% end %>
 
 # As of 0.59.8, the React pod does not compile for tvOS
-# <% if app_target :tvos %>
+<% if app_target :tvos %>
 # target '<%= app_target(:tvos).name %>' do
 #   platform :tvos, '<%= app_target(:tvos).deployment_target %>'
 <%= app_target(:tvos).podfile_excerpt commented_out: true %>
 # end
-# <% end %>
+<% end %>
 
-# <% if test_target :tvos %>
+<% if test_target :tvos %>
 # target '<%= test_target(:tvos).name %>' do
 #   platform :tvos, '<%= app_target(:tvos).deployment_target %>'
 <%= test_target(:tvos).podfile_excerpt commented_out: true %>
 # end
-# <% end %>
+<% end %>
